src/main/kotlin/com/example/kca/global/error/response/ErrorResponse.kt
package com.example.kca.global.error.response

data class ErrorResponse (
    val message: String?,
    val status: Int
)